--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
+    "luxon": "^3.2.1",
     "mongoose": "^6.8.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1"
