--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "compression": "^1.7.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^6.14.2",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "luxon": "^3.2.1",
