--- a/client/package.json
+++ b/client/package.json
@@ -2,10 +2,12 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.2.2",
     "luxon": "^3.2.1",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
