--- a/server/package.json
+++ b/server/package.json
@@ -13,10 +13,12 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-jwt": "^6.1.0",
     "express-validator": "^6.14.2",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
